# pixi_python_template

./: pixi.toml
code/testpackage/: pyproject.toml
