[project]
name = "testpackage"
version = "0.1a"
authors = [
    {name = "David Shipman", email= "david.shipman@monash.edu"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true